# cmake-tutorial

./: .gitignore
studentlib_shared/: CMakeLists.txt
studentlib_shared/include/: Student.h
studentlib_shared/src/: Student.cpp
studentlib_static/: CMakeLists.txt
usestudentlib/: CMakeLists.txt
